--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,18 @@
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bona+Nova&display=swap"
+			rel="stylesheet"
+		/>
 		<title>A travel Map</title>
 	</head>
 	<body>
