--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,12 @@
 			href="https://fonts.googleapis.com/css2?family=Bona+Nova&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Laila:wght@600&family=Poppins&display=swap"
+			rel="stylesheet"
+		/>
 		<title>A travel Map</title>
 	</head>
 	<body>
