--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,10 @@
 			href="https://fonts.googleapis.com/css2?family=Laila:wght@600&family=Poppins&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css"
+			rel="stylesheet"
+		/>
 		<title>A travel Map</title>
 	</head>
 	<body>
